@@ -142,6 +142,7 @@ export(ssl_cert_locations)
 export(stash)
 export(stash_drop)
 export(stash_list)
+export(stash_pop)
 export(status)
 export(tag)
 export(tag_delete)
