@@ -1,6 +1,6 @@
 /*
  *  git2r, R bindings to the libgit2 library.
- *  Copyright (C) 2013-2015 The git2r contributors
+ *  Copyright (C) 2013-2018 The git2r contributors
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License, version 2,
@@ -23,6 +23,7 @@
 #include <Rinternals.h>
 
 SEXP git2r_stash_drop(SEXP repo, SEXP index);
+SEXP git2r_stash_pop(SEXP repo, SEXP index);
 SEXP git2r_stash_save(SEXP repo, SEXP message, SEXP index, SEXP untracked,
                       SEXP ignored, SEXP stasher);
 SEXP git2r_stash_list(SEXP repo);
